# iXSphereVFS

./: .gitignore  C1_REVIEW.md  CMakeLists.txt  ISSUES.md  LICENSE  PHASE28_BINJOB_FILEDEL_IMPL_REVIEW.md  PHASE28_BINJOB_RENAME_IMPL_REVIEW.md  PHASE28_BINJOB_RENAME_REVIEW.md  README.md  SPEC.md  SPEC.v1.md
Testing/Temporary/: CTestCostData.txt
bench/: bench.c
docs/: API.md  CACHE.md  CONTENTION.md  FUZZING.md  PERFORMANCE.md
impl/: README.md  TODO.md  phase-1-platform-primitives.md  phase-10-optimization.md  phase-10-sqlite-vfs.md  phase-11-sqlite-bench.md  phase-12-fuse-integration.md  phase-13-runtime-structures.md  phase-14-vptr-api.md  phase-15-lazy-pagenodes.md  phase-16-dynamic-array.md  phase-17-dir-index.md  phase-18-directory-radix-tree.md  phase-19-unbounded-directory-listing.md  phase-2-storage-backend.md  phase-20-cursor-readdir-cache.md  phase-21-hash-map.md  phase-22-sparse-var-array.md  phase-23-hash-map-var-array-backend.md  phase-24-hash-map-dedup.md  phase-25-pool-by-value-migration.md  phase-26-unified-tree.md  phase-27-free-page-queue.md  phase-28-bin-job-file-deletion.md  phase-28-bin-job-rename-tombstone.md  phase-28-gc-free-pages.md  phase-28-gc.md  phase-3-pool-allocator.md  phase-4-node-types.md  phase-5-tree-operations.md  phase-6-epoch-system.md  phase-7-gc.md  phase-8-filesystem-api.md  phase-8A-locking-fix.md  phase-9-optimization.md  phase-9-sqlite-vfs.md  plan-phase-4.md
include/: ixsphere_vfs.h  nodes.h  tree_api.h  vfs_internal.h
include/ixsphere/: vfs.h  vfs_internal.h
src/: bin.c  bin.h  crc32c.c  dentry_cache.c  dentry_cache.h  epoch.c  epoch.h  error.c  free_bitmap.c  fuse_dir_cache.c  fuse_dir_cache.h  fuse_ioctl.h  fuse_main.c  fuse_vfs.c  fuse_vfs.h  fuse_vfs_ctl.c  gc.c  gc.h  gc_bin_file_deleted.c  gc_bin_free_pages.c  gc_bin_rename_tombstone.c  gc_map.c  gc_map.h  hash_map.c  hash_map.h  indirection.c  lazy_mirror.c  mapper.c  mapper.h  node.c  nodes.c  nodes.h  page_array.c  page_array.h  page_buf.h  page_cache.c  page_header.c  platform.h  pool.c  pool.h  (+11 more)
test/: finder_sim.c  test_atomics.c  test_bin.c  test_c6_debug.c  test_crash.c  test_crc32c.c  test_epoch.c  test_fuse.sh  test_fuzz.c  test_gc.c  test_gc_thread.c  test_hash_map.c  test_main.c  test_mapper.c  test_nodes.c  test_page_buf.c  test_platform.c  test_pool.c  test_resolve_path.c  test_runner.c  test_storage.c  test_tree.c  test_var_array.c
test/scenarios/: BENCH_BASELINE.md  REPORT.md  batch_01.json  batch_02.json  batch_03.json  batch_04.json  batch_05.json  batch_06.json  batch_07.json  batch_08.json  batch_09.json  batch_10.json  bench_baseline.json  bench_ditto.py  bench_phase19.json  bench_phase20-final.json  bench_phase20d.json  bench_phase24b.json  bench_phase24e.json  bench_phase25_clean.json  hash_map_microbench.c  hash_map_params_bench.c  linear_scan_microbench.c  results_batch_01.json  results_batch_02.json  results_batch_03.json  results_batch_04.json  results_batch_05.json  results_batch_06.json  results_batch_07.json  results_batch_07_phase19.json  results_batch_07_phase20.json  results_batch_08.json  results_batch_09.json  results_batch_09_phase19.json  results_batch_09_phase20.json  results_batch_10.json  run_bench.sh  run_scenario_batch.py
test/scenarios/bench_phase24b_compare/: COMPARISON.md  HASHMAP_BOTTLENECK.md  HASHMAP_PUT_PROFILE.md  bench_posthash_run1.json  bench_posthash_run2.json  bench_posthash_run3.json  bench_prehash_bg.json  bench_prehash_run2.json  bench_prehash_run3.json
test/scenarios/bench_phase24c/: COMPARISON.md  bench_old_defaults_run1.json  bench_phase24c_run1.json  bench_phase24c_run2.json  bench_phase24c_run3.json
test/scenarios/bench_phase24d/: COMPARISON.md  bench_phase24d_posthash_run1.json  bench_phase24d_posthash_run2.json  bench_phase24d_posthash_run3.json  bench_phase24d_prehash_run1.json  bench_phase24d_prehash_run2.json  bench_phase24d_prehash_run3.json
tools/: populate.c  test_grow.c  test_snapshot.c  test_subdir.c  test_truncate.c  vfs_walk.c  vfsctl.c
